Accept Apple gift cards in server cart
